@@ -1876,7 +1876,7 @@ Namespace DotNetNuke.Modules.Forum
                     RenderRowBegin(wr) ' <tr> (start avatar row)
                     RenderCellBegin(wr, "Forum_UserAvatar", "", "", "", "top", "", "") ' <td>
                     wr.Write("<br />")
-                    If objConfig.EnableProfileAvatar And author.UserID > 0 Then
+                    If objConfig.EnableUserAvatar And author.UserID > 0 Then
                         If Not author.IsSuperUser Then
                             Dim WebVisibility As UserVisibilityMode
                             WebVisibility = author.Profile.ProfileProperties(objConfig.AvatarProfilePropName).ProfileVisibility.VisibilityMode
@@ -2003,34 +2003,14 @@ Namespace DotNetNuke.Modules.Forum
         ''' <remarks></remarks>
         Private Sub RenderProfileAvatar(ByVal author As ForumUserInfo, ByVal wr As HtmlTextWriter)
             ' This needs to be rendered w/ specified size
-            If objConfig.EnableProfileUserFolders Then
-                ' The link click below (duplicated from core profile page) presents some serious issues under volume. 
-                'imgUserProfileAvatar.ImageUrl = DotNetNuke.Common.Globals.LinkClick("fileid=" & author.AvatarFile.FileId.ToString(), PortalSettings.ActiveTab.TabID, Null.NullInteger)
+            If objConfig.EnableUserAvatar Then
                 If author.ProfileAvatar <> String.Empty Then
                     Dim imgUserProfileAvatar As New Image
-
                     imgUserProfileAvatar.ImageUrl = author.AvatarComplete
-                    'DotNetNuke.Web.UI.Utilities.CreateThumbnail(author.AvatarCoreFile, imgUserProfileAvatar, objConfig.UserAvatarWidth, objConfig.UserAvatarHeight)
-
                     imgUserProfileAvatar.RenderControl(wr)
                     imgUserProfileAvatar.Visible = True
                 End If
-            Else
-                If author.AvatarComplete <> String.Empty Then
-                    ' If we are here, file stored as name and not id (in UserProfile table).
-                    'CP: NOTE: Telerik conversion
-                    Dim rbiProfileAvatar As New Telerik.Web.UI.RadBinaryImage
-                    'Dim rbiProfileAvatar As New DotNetNuke.Wrapper.UI.WebControls.DnnBinaryImage
-                    rbiProfileAvatar.Width = objConfig.UserAvatarWidth
-                    rbiProfileAvatar.Height = objConfig.UserAvatarHeight
-                    rbiProfileAvatar.ImageUrl = author.AvatarComplete
-
-                    rbiProfileAvatar.RenderControl(wr)
-                End If
             End If
-
-            ' Below is for use when no Telerik integration is going on. (Uncomment line below, comment out lines above)
-            'RenderImage(wr, author.AvatarComplete, author.SiteAlias & "'s " & ForumControl.LocalizedText("Avatar"), "", objConfig.UserAvatarWidth.ToString(), objConfig.UserAvatarHeight.ToString())
         End Sub
 
         ''' <summary>
